[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
version='2024'
name = 'lockstep_rvm'
description = 'A Python implementation of a regex virtual machine that runs threads in lockstep.'
readme = 'README.md'
dependencies = ['pytest', 'numpy']
requires-python = '>= 3.8'

[tool.hatch.build.targets.wheel]
packages=['src/lockstep_rvm']